fix(styles): disable text-wrap: pretty on article titles
The pretty wrapping algorithm creates awkward line breaks on large
display headings, pushing very little text to the last line.

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -360,6 +360,7 @@ figure,
 }
 
 #article-title {
+  text-wrap: auto;
   margin: calc(4 * $base-margin) 0 0;
 
   @media all and (max-width: $max-mobile-width) {
